--- a/index.html
+++ b/index.html
@@ -644,10 +644,12 @@
 				<p>Om toch eea. te kanaliseren en bij elkaar te houden hebben we een bestuur, dat bestaat uit deze
 					personen.</p>
 				<ul>
-					<li><strong>Hazewind</strong> alias Niko Geens <em>(voorzitter)</em></li>
-					<li><strong>Hop</strong> alias Stijn Van Asselberghs <em>(financiëel directeur)</em></li>
-					<li><strong>Vos</strong> alias Bart Van Asch <em>(logistiek & materiaal)</em></li>
-					<li><strong>Gibbon</strong> alias Koen Berings <em>(logistiek & materiaal)</em></li>
+					<li><strong>Gazelle</strong> alias Ilse Van den Wyngaert<em>(voorzitster)</em></li>
+					<li><strong>Hop</strong> alias Stijn Van Asselberghs<em>(penningmeester)</em></li>
+					<li><strong>Kauw</strong> alias Sien Van Dievel<em>(secretaris)</em></li>
+					<li><strong>Dolfijn</strong> alias Kristof Ceulemans<em>(secretaris)</em></li>
+					<li><strong>Vos</strong> alias Bart Van Asch<em>(logistiek & materiaal)</em></li>
+					<li><strong>Gibbon</strong> alias Koen Berings<em>(logistiek & materiaal)</em></li>
 				</ul>
 				<p><strong>Echter niet vergeten:</strong> we kunnen steevast rekenen op een solide achterban, de harde
 					kern zoals dat heet, zonder dewelke vele activiteiten nooit tot stand zouden komen.</p>
