prep nieuw jaarthema

--- a/index.html
+++ b/index.html
@@ -474,14 +474,10 @@
 
 						<select name="LASTYEAR" class="lastyear" id="mce-LASTYEAR">
 							<option value="--">Laatste scoutsjaar (jaarthema, kampplaats, kampthema)</option>
-							<!-- <option value="2024-2025">2029-2030 - ... - ... - ...</option> -->
-							<!-- <option value="2024-2025">2028-2029 - ... - ... - ...</option> -->
-							<!-- <option value="2024-2025">2027-2028 - ... - ... - ...</option> -->
-							<!-- <option value="2024-2025">2026-2027 - ... - ... - ...</option> -->
-							<!-- <option value="2024-2025">2025-2026 - ... - ... - ...</option> -->
-							<!-- <option value="2024-2025">2024-2025 - ... - ... - ...</option> -->
+							<!-- <option value="2025-2026">2025-2026 - ... - ... - ...</option> -->
+							<!-- <option value="2024-2025">2024-2025 - Onderweg opgestoken - ... - ...</option> -->
 							<option value="--">Niet van toepassing</option>
-							<option value="2023-2024">2023-2024 - Speelstek, reuzeplek! - Ottré - ...</option>
+							<option value="2023-2024">2023-2024 - Speelstek, reuzeplek! - Ottré - Sprookjeskamp</option>
 							<option value="2022-2023">2022-2023 - DAS Goesting - Krinkelt - Jurrassic Park</option>
 							<option value="2021-2022">2021-2022 - Dromenland in zicht - Solwaster - Piraten</option>
 							<option value="2020-2021">2020-2021 - 't Zal wel zijn - Graide - Leger</option>
