--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 				<ul>
 					<!-- <li class="past|present|future"><a href="https://fb+href">1/1/2024 | Naam Activiteit</a></li> -->
 					<li class="future"><a href="https://www.facebook.com/events/510530938545355">23-25/05/2025 | Zomeroffensief // SOLL-weekend</a></li>
-					<li class="past"><a href="https://oudscouts.parsival.be/comedy-night">21/3/2025 | Comedy Night</a></li>
+					<li class="future"><a href="https://oudscouts.parsival.be/comedy-night">21/3/2025 | Comedy Night</a></li>
 					<li class="future"><a href="https://www.facebook.com/events/1296702425074524">24-26/01/2025 | Winteroffensief 2025</a></li>
 					<li class="future"><a href="https://www.facebook.com/events/1580129822611388">12/01/2025 | OS nieuwjaarsreceptie 2025</a></li>
 					<li class="future"><a href="https://oudscouts.parsival.be/oud-op-nieuw">31/12/2024 | Oud op nieuw</a></li>
