remove FB group member count

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 								</tr>
 								<tr>
 									<td style="color:#90949c;font-size:12px;font-weight:normal;text-align:center;">
-										Besloten groep · 10 leden</td>
+										Besloten groep</td>
 								</tr>
 								<tr>
 									<td style="padding:8px 12px 12px 12px;">
