update FB group target url

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 													<td
 														style="background-color:#4267b2;border-radius:3px;text-align:center;">
 														<a style="color:#3b5998;text-decoration:none;cursor:pointer;width:100%;"
-															href="https://www.facebook.com/plugins/group/join/popup/?group_id=428188391251729&amp;source=email_campaign_plugin"
+															href="https://www.facebook.com/groups/oudscoutsparsival"
 															target="_blank" rel="noopener">
 															<table border="0" cellspacing="0" cellpadding="3"
 																align="center" style="border-collapse:collapse;">
