replace goolge+ footerlink with faebook

--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
 
 		<footer>
 			<p>&copy 1999-2015 Oudscouts Parsival - Alle rechten voorbehouden - <a
-					href="https://plus.google.com/103890813912672931897" rel="publisher">Google+</a><br />
+					href="https://www.facebook.com/groups/oudscoutsparsival" rel="publisher">Oud-Scouts Parsival @ Facebook</a><br />
 				Deze site valt onder een <a rel="license"
 					href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.nl">Creative Commons licentie</a>.</p>
 			<p><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.nl"><img
