add facebook page to contact options

--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
 				<ul>
 					<li>door ons eenvoudigweg aan te spreken, ergens te velde</li>
 					<li>via email: <a href="mailto:oudscouts@parsival.be">oudscouts@parsival.be</a></li>
-					<li>met een bericht op onze G+ pagina (voor alle volgers)</li>
+					<li>met een bericht via onze <a href="https://www.facebook.com/groups/oudscoutsparsival"></a>Oud-Scouts Parsival group op Facebook</a></li>
 				</ul>
 				<aside>
 					<p>Sidder noch beef, we bijten heus niet ;-)</p>
