change facebook widget location

--- a/index.html
+++ b/index.html
@@ -54,72 +54,6 @@
 
 	<!-- Add your site or application content here -->
 
-	<div id="fbembed">
-		<!-- facebook group widget -->
-		<table border="0" width="100%" cellspacing="0" cellpadding="0" style="border-collapse:collapse;">
-			<tbody>
-				<tr>
-					<td>
-						<table border="0" cellspacing="0" cellpadding="0"
-							style="border-collapse:separate;background-color:#ffffff;border:1px solid #dddfe2;border-radius:3px;font-family:Helvetica, Arial, sans-serif;margin:0px auto; max-width:640px;">
-							<tbody>
-								<tr style="padding-bottom: 8px;">
-									<td><img class="img"
-											src="https://scontent-frx5-1.xx.fbcdn.net/v/t1.0-0/c0.0.568.296a/p320x320/51945489_2160385257389077_4848220171044651008_n.jpg?_nc_cat=103&amp;_nc_ht=scontent-frx5-1.xx&amp;oh=3feff3aa30d5842d97fbed96acd87c5f&amp;oe=5D273D72"
-											width="100%" height="" alt=""></td>
-								</tr>
-								<tr>
-									<td
-										style="font-size:14px;font-weight:bold;padding:8px 8px 0px 8px;text-align:center;">
-										Oud-Scouts Parsival</td>
-								</tr>
-								<tr>
-									<td style="color:#90949c;font-size:12px;font-weight:normal;text-align:center;">
-										Besloten groep</td>
-								</tr>
-								<tr>
-									<td style="padding:8px 12px 12px 12px;">
-										<table border="0" cellspacing="0" cellpadding="0"
-											style="border-collapse:collapse;width:100%;">
-											<tbody>
-												<tr>
-													<td
-														style="background-color:#4267b2;border-radius:3px;text-align:center;">
-														<a style="color:#3b5998;text-decoration:none;cursor:pointer;width:100%;"
-															href="https://www.facebook.com/groups/oudscoutsparsival"
-															target="_blank" rel="noopener">
-															<table border="0" cellspacing="0" cellpadding="3"
-																align="center" style="border-collapse:collapse;">
-																<tbody>
-																	<tr>
-																		<td
-																			style="border-bottom:3px solid #4267b2;border-top:3px solid #4267b2;color:#FFF;font-family:Helvetica, Arial, sans-serif;font-size:12px;font-weight:bold;">
-																			Lid worden van deze groep</td>
-																	</tr>
-																</tbody>
-															</table>
-														</a>
-													</td>
-												</tr>
-											</tbody>
-										</table>
-									</td>
-								</tr>
-								<tr>
-									<td style="border-top:1px solid #dddfe2;font-size:12px;padding:8px 12px;">Nieuws
-										&amp; Activiteiten voor oud-Parsivalianen en sympathisanten. Oud-Scouts Parsival
-										is de oudscoutswerking van Scouts Parsival. We informeren op regelmatige basis
-										over activiteiten en nieuws voor en door (oud-)scouts... aan al wie het weten
-										wil.</td>
-								</tr>
-							</tbody>
-						</table>
-					</td>
-				</tr>
-			</tbody>
-		</table>
-	</div>
-
 	<div id="accordion">
 		<section id="activiteiten-kalender">
 			<h2 class="slidetitle"><a href="#activiteiten-kalender"
@@ -669,6 +603,73 @@
 					<li>via email: <a href="mailto:oudscouts@parsival.be">oudscouts@parsival.be</a></li>
 					<li>met een bericht via onze <a href="https://www.facebook.com/groups/oudscoutsparsival">Oud-Scouts Parsival Facebook groep</a></li>
 				</ul>
+
+				<div id="fbembed">
+					<!-- facebook group widget -->
+					<table border="0" width="100%" cellspacing="0" cellpadding="0" style="border-collapse:collapse;">
+						<tbody>
+							<tr>
+								<td>
+									<table border="0" cellspacing="0" cellpadding="0"
+										style="border-collapse:separate;background-color:#ffffff;border:1px solid #dddfe2;border-radius:3px;font-family:Helvetica, Arial, sans-serif;margin:0px auto; max-width:640px;">
+										<tbody>
+											<tr style="padding-bottom: 8px;">
+												<td><img class="img"
+														src="https://scontent-frx5-1.xx.fbcdn.net/v/t1.0-0/c0.0.568.296a/p320x320/51945489_2160385257389077_4848220171044651008_n.jpg?_nc_cat=103&amp;_nc_ht=scontent-frx5-1.xx&amp;oh=3feff3aa30d5842d97fbed96acd87c5f&amp;oe=5D273D72"
+														width="100%" height="" alt=""></td>
+											</tr>
+											<tr>
+												<td
+													style="font-size:14px;font-weight:bold;padding:8px 8px 0px 8px;text-align:center;">
+													Oud-Scouts Parsival</td>
+											</tr>
+											<tr>
+												<td style="color:#90949c;font-size:12px;font-weight:normal;text-align:center;">
+													Besloten Facebook groep</td>
+											</tr>
+											<tr>
+												<td style="padding:8px 12px 12px 12px;">
+													<table border="0" cellspacing="0" cellpadding="0"
+														style="border-collapse:collapse;width:100%;">
+														<tbody>
+															<tr>
+																<td
+																	style="background-color:#4267b2;border-radius:3px;text-align:center;">
+																	<a style="color:#3b5998;text-decoration:none;cursor:pointer;width:100%;"
+																		href="https://www.facebook.com/groups/oudscoutsparsival"
+																		target="_blank" rel="noopener">
+																		<table border="0" cellspacing="0" cellpadding="3"
+																			align="center" style="border-collapse:collapse;">
+																			<tbody>
+																				<tr>
+																					<td
+																						style="border-bottom:3px solid #4267b2;border-top:3px solid #4267b2;color:#FFF;font-family:Helvetica, Arial, sans-serif;font-size:12px;font-weight:bold;">
+																						Lid worden van deze groep</td>
+																				</tr>
+																			</tbody>
+																		</table>
+																	</a>
+																</td>
+															</tr>
+														</tbody>
+													</table>
+												</td>
+											</tr>
+											<tr>
+												<td style="border-top:1px solid #dddfe2;font-size:12px;padding:8px 12px;">Nieuws
+													&amp; Activiteiten voor oud-Parsivalianen en sympathisanten. Oud-Scouts Parsival
+													is de oudscoutswerking van Scouts Parsival. We informeren op regelmatige basis
+													over activiteiten en nieuws voor en door (oud-)scouts... aan al wie het weten
+													wil.</td>
+											</tr>
+										</tbody>
+									</table>
+								</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+
 				<aside>
 					<p>Sidder noch beef, we bijten heus niet ;-)</p>
 				</aside>
@@ -676,7 +677,7 @@
 		</section>
 
 		<footer>
-			<p>&copy 1999-2015 Oudscouts Parsival - Alle rechten voorbehouden - <a
+			<p>&copy 1999-2025 Oudscouts Parsival - Alle rechten voorbehouden - <a
 					href="https://www.facebook.com/groups/oudscoutsparsival" rel="publisher">Oud-Scouts Parsival @ Facebook</a><br />
 				Deze site valt onder een <a rel="license"
 					href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.nl">Creative Commons licentie</a>.</p>
