--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 
 	<!-- Add your site or application content here -->
 
+	<div id="header"><h1>Oud-Scouts Parsival</h1></div>
+
 	<div id="accordion">
 		<section id="activiteiten-kalender">
 			<h2 class="slidetitle"><a href="#activiteiten-kalender"
