--- a/index.html
+++ b/index.html
@@ -74,13 +74,20 @@
 
 				<ul>
 					<!-- <li class="past|present|future"><a href="https://fb+href">1/1/2024 | Naam Activiteit</a></li> -->
+					<li class="future">15/06/2025 | OS café (Juni 2025)</li>
 					<li class="future"><a href="https://www.facebook.com/events/510530938545355">23-25/05/2025 | Zomeroffensief // SOLL-weekend</a></li>
+					<li class="future">18/05/2025 | OS café (Mei 2025)</li>
+					<li class="future">20/04/2025 | OS café (April 2025)</li>
 					<li class="future"><a href="https://oudscouts.parsival.be/comedy-night">21/3/2025 | Comedy Night</a></li>
-					<li class="future"><a href="https://www.facebook.com/events/1296702425074524">24-26/01/2025 | Winteroffensief 2025</a></li>
-					<li class="future"><a href="https://www.facebook.com/events/1580129822611388">12/01/2025 | OS nieuwjaarsreceptie 2025</a></li>
-					<li class="future"><a href="https://oudscouts.parsival.be/oud-op-nieuw">31/12/2024 | Oud op nieuw</a></li>
-					<li class="future"><a href="https://www.facebook.com/events/463100189396706">10/11/2024 | 17e Tuinhuizentocht (2024)</a></li>
-					<li class="future"><a href="#">27/10/2024 | OS café (Oktober 2024)</a></li>
+					<li class="future"><a href="https://drive.google.com/file/d/1kYT3p3dpuHmsVNwFY1WodaNgVRZBLwMu/view?usp=sharing">29-30/03/2025 | L(uxe) O(ud) S(couts) weekend</a></li>
+					<li class="future">16/03/2025 | OS café (Maart 2025)</li>
+					<li class="future">16/02/2025 | OS café (Februari 2025)</li>
+					<li class="past"><a href="https://www.facebook.com/events/1296702425074524">24-26/01/2025 | Winteroffensief 2025</a></li>
+					<li class="past">19/01/2025 | OS café (Januari 2025)</li>
+					<li class="past"><a href="https://www.facebook.com/events/1580129822611388">12/01/2025 | OS nieuwjaarsreceptie 2025</a></li>
+					<li class="past"><a href="https://oudscouts.parsival.be/oud-op-nieuw">31/12/2024 | Oud op nieuw</a></li>
+					<li class="past"><a href="https://www.facebook.com/events/463100189396706">10/11/2024 | 17e Tuinhuizentocht (2024)</a></li>
+					<li class="past"><a href="#">27/10/2024 | OS café (Oktober 2024)</a></li>
 					<li class="past"><a href="https://www.facebook.com/events/549592087724216">12/10/2044 | OS Cafe (in tent KNALT)</a></li>
 					<li class="past"><a href="https://parsival.be/knalt/">11-13/10/2024 | Parsival Knalt!</a></li>
 					<li class="past"><a href="https://www.facebook.com/events/1208355023812724">30/7-7/8/2023 | OS kamp 2024 (Ottré)</a></li>
